--- a/src/app/estudiantes/estudiantes.component.html
+++ b/src/app/estudiantes/estudiantes.component.html
@@ -1,10 +1,9 @@
 
- <h2> Listas estudiantes</h2>
-<div [style.padding]="padding ? 40 : 0">
-  <h3>{{titulo}}</h3>
+ <div [style.padding]="padding ? 40 : 0">
+  <h2>{{titulo}}</h2>
   <ul>
     <li *ngFor="let estudiante of listadeestudiantes()">
-      {{estudiante}}
+     <span (click)="clickEnEstudiante($event)"> {{estudiante}}</span>
     </li>
   </ul>
 </div>
